--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +45,7 @@
   "devDependencies": {
     "core-js": "^3.6.4",
     "node-sass": "^4.13.1",
-    "react-router-dom": "^5.1.2",
-    "path-to-regexp": "^1.7.0"
+    "path-to-regexp": "^1.7.0",
+    "react-router-dom": "^5.1.2"
   }
 }
